--- a/styles.css
+++ b/styles.css
@@ -6,42 +6,129 @@ body {
   background-repeat: no-repeat;
   background-image: url(assets/vtxrm.png);
   background-position: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .container {
   color: rgba(255, 255, 255, 0.9);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  min-height: 400px;
+  position: relative;
 }
 
 .container:before {
   content: "";
   position: absolute;
   height: 300px;
-  width: 100vw;
+  width: 100%;
   background: rgba(0, 0, 0, 0.4);
   margin-bottom: 12px;
 }
 
 h1 {
   margin: 0;
-  z-index:1;
+  z-index: 1;
 }
 
 .phrase {
   font-size: 2rem;
+  padding-right: 100px;
 }
 
 .date {
   font-size: 4rem;
+  padding-right: 100px;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+.calendars {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  background-color: #082642f7;
+  padding: 0 30px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.calendar-container {
+  color: rgba(255, 255, 255, 0.9);
+  padding: 10px 15px;
+  border-radius: 2px;
+  position: relative;
+}
+
+.calendar-title {
+  font-size: 35px;
+  font-weight: 500;
+}
+
+.calendar {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: repeat(7, 1fr);
+  font-size: 25px;
+}
+
+.calendar > div {
+  padding: 3px 8px 0;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+}
+
+.calendar > div:nth-of-type(7n + 1),
+.calendar > div:nth-of-type(7n + 7) {
+  opacity: 0.5;
+}
+
+.is-today {
+  background-color: rgb(40 80 133);
+  border-radius: 4px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.is-office {
+  color: #ff8750;
+}
+
+@media only screen and (max-height: 850px) {
+  .calendar-container:nth-of-type(3) {
+    display: none;
+  }
+}
+
+@media only screen and (max-height: 570px) {
+  .calendar-container:nth-of-type(2) {
+    display: none;
+  }
+
+  .container {
+    min-height: auto;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .calendars {
+    display: none;
+  }
+
+  .phrase,
+  .date {
+    padding-right: 0;
+    text-align: center;
+  }
 }
